--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password=
 spring.datasource.driver-class=org.h2.Driver
 
 management.port=8090
+management.context-path:/api/advertiser
 
 mybatis.configuration.map-underscore-to-camel-case=true
 
