--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,21 @@ buildscript {
 	}
 	repositories {
 		mavenCentral()
+		maven {
+			url "https://plugins.gradle.org/m2/"
+		}
 	}
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}","io.franzbecker:gradle-lombok:1.13")
+
 	}
+
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: "io.franzbecker.gradle-lombok"
 
 group = 'com.anirudh'
 version = '0.0.1-SNAPSHOT'
